Preserve the original name of modules when making classpath permanent

[Bug #19681]

Discovered by Xavier Noria:

```ruby
m = Module.new

class m::C; end
p m::C.name # => "#<Module:0x000000010789fbe0>::C"

m::D = m::C
p m::D.name # => "#<Module:0x000000010789fbe0>::C"

M = m
p M::C.name # => "#<M::D"
```

The reason is that we use the keys from the parent const table to
build the permanent name. But const tables are backed by `id_table`
which isn't ordered, so we have no guarantee that the first match
will be the original name and not an alias.

A solution is to instead extract the original name from the temporary
classpath. It's a bit inelegant as it requires searching into a string,
but it works quite well.